improved testing